chore: use agentic layer
- apply change 'implement-master-routes'
